<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    tools:context=".fragments.StarDetailFragment">

    <TextView
        android:id="@+id/star_name_label"
        style="@style/Widget.Star.TextView"
        android:layout_width="wrap_content"
        android:text="@string/star_name"
        app:layout_constraintBaseline_toBaselineOf="@+id/star_name"
        app:layout_constraintEnd_toStartOf="@+id/star_name"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/star_name"
        style="@style/Widget.Star.TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:text="@string/star_name"
        app:layout_constraintStart_toEndOf="@+id/star_name_label"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Big Star" />

    <TextView
        android:id="@+id/tower_number_label"
        style="@style/Widget.Star.TextView"
        android:layout_width="wrap_content"
        android:text="@string/tower_number"
        app:layout_constraintBaseline_toBaselineOf="@+id/tower_number"
        app:layout_constraintEnd_toStartOf="@+id/tower_number"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tower_number"
        style="@style/Widget.Star.TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toEndOf="@id/tower_number_label"
        app:layout_constraintTop_toBottomOf="@+id/star_name"
        tools:text="2" />

    <TextView
        android:id="@+id/star_comment_label"
        style="@style/Widget.Star.TextView"
        android:layout_width="wrap_content"
        android:text="@string/comment_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/star_comment"
        app:layout_constraintEnd_toStartOf="@+id/star_comment"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/star_comment"
        style="@style/Widget.Star.TextView"
        android:layout_width="wrap_content"
        android:layout_marginStart="@dimen/margin_between_elements"
        android:layout_marginTop="@dimen/margin"
        app:layout_constraintStart_toEndOf="@id/star_comment_label"
        app:layout_constraintTop_toBottomOf="@+id/tower_number"
        tools:text="The weather was nice today" />

    <Button
        android:id="@+id/delete_star"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/star_comment" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/edit_star"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_between_elements"
        android:layout_marginBottom="@dimen/margin_between_elements"
        android:contentDescription="@string/edit_star"
        android:src="@drawable/ic_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@android:color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>